--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@m78/admin",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "description": "Admin for windows&tasks, base on M78",
   "keywords": [
     "admin",
@@ -30,8 +30,11 @@
     "test": "jest"
   },
   "resolutions": {
-    "react-spring": "9.0.0-rc.3",
-    "@types/react": "17.0.3"
+    "react-spring": "9.0.0-rc.3"
+  },
+  "peerDependencies": {
+    "@types/react": ">= 16.0.0",
+    "@types/react-dom": ">= 16.0.0"
   },
   "dependencies": {
     "@lxjx/hooks": "^1.16.4",
@@ -39,16 +42,16 @@
     "@m78/style": "^1.0.23",
     "@m78/wine": "^1.1.5",
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
-    "m78": "^1.0.0-beta.64",
+    "m78": "^1.0.0-beta.65",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@lxjx/preset-config": "^0.1.0",
