--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "test": "jest"
   },
   "resolutions": {
-    "react-spring": "9.0.0-rc.3"
+    "react-spring": "9.0.0-rc.3",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3"
   },
   "peerDependencies": {
     "@types/react": ">= 16.0.0",
@@ -39,12 +41,12 @@
   "dependencies": {
     "@lxjx/hooks": "^1.16.4",
     "@lxjx/utils": "^1.13.0",
-    "@m78/style": "^1.0.24",
+    "@m78/style": "^1.0.29",
     "@m78/wine": "^1.1.7",
     "@types/lodash": "^4.14.168",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
-    "m78": "^1.0.0-beta.66",
+    "m78": "^1.0.0-beta.70",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "tslib": "^2.1.0"
