--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@m78/admin",
   "version": "0.5.0",
-  "description": "Admin for windows&tasks, base on M78",
+  "description": "a multi task admin, base on M78",
   "keywords": [
     "admin",
     "react"
@@ -30,7 +30,6 @@
     "test": "jest"
   },
   "resolutions": {
-    "react-spring": "9.0.0-rc.3",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3"
   },
@@ -40,17 +39,18 @@
   },
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
-    "@lxjx/hooks": "^1.22.3",
-    "@lxjx/utils": "^1.15.0",
-    "@m78/style": "^1.0.31",
-    "@m78/wine": "^1.2.0",
+    "@lxjx/hooks": "^1.30.0",
+    "@lxjx/utils": "^1.7.7",
+    "@m78/render-api": "^1.4.0",
+    "@m78/style": "^2.1.3",
+    "@m78/wine": "^1.4.0",
     "@types/lodash": "^4.14.168",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
-    "m78": "^1.0.0-beta.82",
+    "m78": "^1.0.0-beta.89",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
-    "tslib": "^2.1.0"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.12",
