--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@m78/admin",
-  "version": "0.5.0",
+  "version": "0.6.1",
   "description": "a multi task admin, base on M78",
   "keywords": [
     "admin",
@@ -22,9 +22,9 @@
     "build": "vite build --config config/vite.lib.config.ts && npm run dts:emit",
     "postbuild": "copyfiles package.json dist && copyfiles -u 1 ./src/assets/**/* ./src/style/**/* dist",
     "lint:script": "eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "lint:prettier": "prettier --check ./src/**/*",
+    "lint:prettier": "prettier --check ./src",
     "lint": "npm run lint:prettier && npm run lint:script",
-    "fix": "prettier --check ./src/**/* --write && eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
+    "fix": "prettier --check ./src --write && eslint ./src --ext .js,.jsx,.ts,.tsx --fix",
     "ypublish": "yarn publish ./dist --access public",
     "postypublish": "node config/syncPkg",
     "test": "jest"
@@ -47,7 +47,7 @@
     "@types/lodash": "^4.14.168",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
-    "m78": "^1.0.0-beta.91",
+    "m78": "^1.0.0-beta.92",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "tslib": "^2.3.1"
